# zecwallet-lite-electron

./: .gitignore  README.md  package.json
.github/workflows/: electron.yml
app/: Routes.js  app.html  companion.js  main.dev.js  menu.js  package.json  rpc.js
app/components/: AppState.js  Common.css  Dashboard.js  LoadingScreen.css  LoadingScreen.js  PasswordModal.js  Send.js  Sidebar.js  Transactions.js
app/utils/: utils.js
configs/: webpack.config.renderer.dev.babel.js  webpack.config.renderer.prod.babel.js
internals/scripts/: NativeLoader.js
native/: Cargo.toml  artifacts.json
native/src/: lib.rs
